--- a/index.html
+++ b/index.html
@@ -42,14 +42,123 @@
      <img src="./images/team4.png" alt=""> 
     </div> 
     <div class="team-description"> 
-        <h3 class="team-title">Quick list of Our Features</h3> 
+        <h3 class="
+        ">Quick list of Our Features</h3> 
         <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even </p> 
         <button class="btn-primary"> Explore Me</button>
     </div>
+    </section> 
+    <section class="feature"> 
+     <div class="feature-container"> 
+        <h3 class="banner-title1"> Features you will <br>
+         love & enjoy</h3> 
+        <p class="banner-description"> 
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+        </p> 
+        <div class="cards"> 
+            <h5 class="card-title"> 
+                Dexktop & Mobile Version
+            </h5> 
+            <p class="card-description"> 
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+            </p>
+        </div>
+        <div class="cards"> 
+            <h5 class="card-title"> 
+                Dexktop & Mobile Version
+            </h5> 
+            <p class="card-description"> 
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+            </p>
+        </div>
+        <div class="cards"> 
+            <h5 class="card-title"> 
+                Dexktop & Mobile Version
+            </h5> 
+            <p class="card-description"> 
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+            </p>
+        </div>
+        <div class="cards"> 
+            <h5 class="card-title"> 
+                Dexktop & Mobile Version
+            </h5> 
+            <p class="card-description"> 
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+            </p>
+        </div>
+     </div>
+      <div class="feature-img"> 
+        <img src="./images/architect.png" alt=""> 
+
+        <div class="experience"> 
+            <h3 class="ex-title">10+Year</h3> 
+            <p class="ex-description"> Experience</p>
+          </div>
+      </div> 
+     
     </section>
+    <section class="facts"> 
+        <h3 class="fact-title"> 
+            Some Facts
+        </h3> 
+        <p class="fact-description"> 
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+        </p> 
+
+        <div class="card-container"> 
+            <div class="card">
+                <img src="./images/icons/ribon.png" alt="">
+                <h3 class="card-title"> 
+                   55
+                </h3> 
+                <p class="card-description"> 
+                    Awards Winnings
+                </p>
+            </div>
+            <div class="card">
+                <img src="./images/icons/projects.png" alt="">
+                <h3 class="card-title"> 
+                 1458
+                </h3> 
+                <p class="card-description"> 
+                    Project Finished
+                </p>
+            </div>
+            <div class="card">
+                <img src="./images/icons/customers.png" alt="">
+                <h3 class="card-title"> 
+                    559
+                </h3> 
+                <p class="card-description"> 
+                    Clients Worked
+                </p>
+            </div>
+            <div class="card">
+                <img src="./images/icons/email.png" alt="">
+                <h3 class="card-title"> 
+                     2254
+                </h3> 
+                <p class="card-description"> 
+                    Email Send
+                </p>
+            </div>
+        </div>
+    </section> 
+    <section class="section"> 
+        <h3 class="banner-title"> Our Sponspors</h3> 
+        <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration. </p> 
+        <div class="section-img-container"> 
+            <img src="./images/sponsors/amazon.png" alt="">
+            <img src="./images/sponsors/google.png" alt="">
+            <img src="./images/sponsors/spotify.png" alt="">
+            <img src="./images/sponsors/telerama.png" alt="">
+            <img src="./images/sponsors/figma.png" alt="">
+        </div>
+    </section> 
     </main>
     <footer> 
-
+      <h6 class="footer-title">All right reserved copyright@2023 startup landing page design by <span class="sazin">SAZIN</span></h6>
     </footer>
 </body>
 </html>
